# open_cv_demo

./: .ignore  CMakeLists.txt
src/: add_borders.cpp  add_borders.h  detect_skew_angle.cpp  detect_skew_angle.h  erosion_and_Dilation.cpp  erosion_and_Dilation.h  extract_tables.cpp  extract_tables.h  main.cpp  resize_img.cpp  resize_img.h  rotation_image.cpp  rotation_image.h  show_img.cpp  show_img.h  threshold_img.cpp  threshold_img.h
